效率检查优化； 修正无法保存单色主题的问题；